@@ -151,25 +151,26 @@
 
 	.container { padding: 0 20px; }
 	
-	.row { width: 100%;max-width: 980px; min-width: 727px; margin: 0 auto; }
+	.row { width: 100%; max-width: 980px; min-width: 727px; margin: 0 auto; }
 	/* To fix the grid into a certain size, set max-width to width */
 	.row .row { min-width: 0; }
 	
 	.column, .columns { margin-left: 4.4%; float: left; min-height: 1px; position: relative; }
 	.column:first-child, .columns:first-child { margin-left: 0; }
+	[class*="column"] + [class*="column"]:last-child { float: right; }
 	
-	.row .one.columns 		{ width: 4.3%; }
-	.row .two.columns 		{ width: 13%; }
-	.row .three.columns 	{ width: 21.68%; }
-	.row .four.columns 		{ width: 30.37%; }
-	.row .five.columns 		{ width: 39.1%; }
-	.row .six.columns 		{ width: 47.8%; }
-	.row .seven.columns 	{ width: 56.5%; }
-	.row .eight.columns 	{ width: 65.2%; }
-	.row .nine.columns 		{ width: 73.9%; }
-	.row .ten.columns 		{ width: 82.6%; }
-	.row .eleven.columns 	{ width: 91.3%; }
-	.row .twelve.columns 	{ width: 100%; }
+	.row .one 		{ width: 4.3%; }
+	.row .two 		{ width: 13%; }
+	.row .three 	{ width: 21.679%; }
+	.row .four 		{ width: 30.37%; }
+	.row .five 		{ width: 39.1%; }
+	.row .six 		{ width: 47.8%; }
+	.row .seven 	{ width: 56.5%; }
+	.row .eight 	{ width: 65.2%; }
+	.row .nine 		{ width: 73.9%; }
+	.row .ten 		{ width: 82.6%; }
+	.row .eleven 	{ width: 91.3%; }
+	.row .twelve 	{ width: 100%; }
 	
 	.row .offset-by-one 	{ margin-left: 13.1%;  }
 	.row .offset-by-two 	{ margin-left: 21.8%;  }
@@ -219,9 +220,9 @@
 	
 	
 	
-	img { max-width: 100%; height: auto; }
-	object, embed { max-width: 100%; }
+	img, object, embed { max-width: 100%; height: auto; }
 	img { -ms-interpolation-mode: bicubic; }
+	#map_canvas img, .map_canvas img {max-width: none!important;}
 	 
 	 /* Nicolas Gallagher's micro clearfix */
 	 .row:before, .row:after, .clearfix:before, .clearfix:after { content:""; display:table; }
@@ -264,7 +265,7 @@
 	.block-grid.five-up>li { margin-left: 1.5%; width: 18.5%; }
 /* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
 
-/* Artfully masterminded by ZURB  */
+
 
 
 
